--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -3,3 +3,34 @@
   line-height: 18px;
   color: $special-dark-grey;
 }
+
+.copyright__link {
+  display: flex;
+  justify-content: space-between;
+
+  &:hover path {
+    fill: $special-green;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
+.copyright__text {
+  font-family: "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+  line-height: 18px;
+  margin: 8px 0 0 0;
+  color: $special-dark-grey;
+
+  @media (min-width: $tablet-width) {
+    margin-right: 24px;
+  }
+}
+
+.page-footer__copyright {
+  margin-top: 2px;
+}
