--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -1,6 +1,8 @@
 $basic-white: #ffffff;
 $special-basic-white: rgba(255, 255, 255, 0.3);
 $basic-black: #000000;
+$basic-special-black: rgba(0, 0, 0, 0.24);
+$basic-special-black1: rgba(0, 0, 0, 0.4);
 $special-black: #111111;
 $basic-green:rgba(104, 183, 56, 0.85);
 $basic-green2: #5eaa2f;
