--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -1,5 +1,13 @@
 .effect {
   margin-bottom: 27px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 44px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 70px;
+  }
 }
 
 .effect__list {
@@ -31,12 +39,22 @@
   min-height: 266px;
 
   @media (min-width: $tablet-width) {
-    padding: 77px 28px 53px 52px;
+    padding: 77px 28px 56px 52px;
   }
 
   @media (min-width: $desktop-width) {
     width: calc(100% / 2 - 40px);
-    padding: 41px 52px 51px 52px;
+    padding: 78px 52px 58px 51px;
+  }
+}
+
+.effect__item--weight-gain .effect__item-text {
+  @media (min-width: $tablet-width) {
+    width: 342px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 457px;
   }
 }
 
@@ -53,6 +71,11 @@
   @media (min-width: $tablet-width) {
     font-size: 36px;
     line-height: 36px;
+    margin: 0 0 25px 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 73px 164px;
   }
 }
 
@@ -79,6 +102,15 @@
 
   @media (min-width: $tablet-width) {
     color: $basic-black;
+    width: 377px;
+    border: none;
+    padding-bottom: 0;
+    margin-bottom: 52px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 467px;
+    margin-bottom: 27px;
   }
 }
 
@@ -94,6 +126,32 @@
   &:active {
     opacity: 0.3;
   }
+
+  @media (min-width: $tablet-width) {
+    width: 165px;
+    background-position: 125px 8px;
+
+    &:hover {
+      background-position: 133px 8px;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 170px;
+    background-position: 130px 8px;
+
+    &:hover {
+      background-position: 136px 8px;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
 }
 
 .effect__link-weight-gain {
@@ -108,22 +166,84 @@
   &:active {
     opacity: 0.3;
   }
+
+  @media (min-width: $tablet-width) {
+    width: 165px;
+    background-position: 121px 8px;
+
+    &:hover {
+      background-position: 129px 8px;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 165px;
+    background-position: 122px 8px;
+
+    &:hover {
+      background-position: 130px 8px;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
+  }
 }
 
 .effect__item--weight-loss {
   background: url("../img/logo/logo-cat-slim.svg") 22px 21px no-repeat, $basic-grey;
+
+  @media (min-width: $tablet-width) {
+    background-size: 200px 213px;
+    background-position: 446px 80px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-size: 100px 106px;
+    background-position: 52px 40px;
+  }
 }
 
 .effect__item--weight-gain {
   background: url("../img/logo/logo-cat-fat.svg") 13px 24px no-repeat, $basic-grey;
+
+  @media (min-width: $tablet-width) {
+    background-size: 268px 200px;
+    background-position: 410px 91px;
+  }
+
+  @media (min-width: $desktop-width) {
+    background-size: 134px 100px;
+    background-position: 33px 47px;
+  }
 }
 
 .effect__item-link--loss {
   display: inline-block;
   padding-right: 15px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 25px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 29px;
+  }
 }
 
 .effect__item-link--gain {
   display: inline-block;
   padding-right: 17px;
+
+  @media (min-width: $tablet-width) {
+    padding-right: 26px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 27px;
+  }
 }
