--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,13 +1,12 @@
 .example {
-  padding-top: 27px;
   background: $basic-grey;
 
   @media (min-width: $tablet-width) {
-    background: linear-gradient(180deg, transparent 57%, $basic-grey2 43%);
+    background: linear-gradient(180deg, transparent 55.5%, $basic-grey2 44.5%);
   }
 
   @media (min-width: $desktop-width) {
-    background: linear-gradient(0deg, transparent 70%, $basic-white 30%),
+    background: linear-gradient(0deg, transparent 73.2%, $basic-white 30%),
       linear-gradient(270deg, $basic-grey2 50%, $basic-grey 50%);
   }
 }
@@ -24,15 +23,17 @@
   padding-bottom: 34px;
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 44px;
+    padding-bottom: 70px;
     background: linear-gradient(0deg, $basic-grey2 70%, transparent 30%);
   }
 
   @media (min-width: $desktop-width) {
     grid-row: 1/3;
     grid-column: 2/3;
-    background: linear-gradient(0deg, transparent 70%, $basic-white 30%),
+    background: linear-gradient(0deg, transparent 73.1%, $basic-white 26.9%),
       linear-gradient(270deg, $basic-grey2 50%, $basic-grey 50%);
+    padding-top: 262px;
+    padding-bottom: 0;
   }
 }
 
@@ -46,6 +47,10 @@
   @media (min-width: $tablet-width) {
     justify-content: flex-start;
   }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 60px 0;
+  }
 }
 
 .example__item {
@@ -58,7 +63,7 @@
 
   @media (min-width: $tablet-width) {
     padding: 15px 0 0 0;
-    min-width: 163px;
+    min-width: 162px;
     height: 72px;
     margin: 0 42px 0 0;
   }
@@ -68,7 +73,7 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 59px;
+    margin-bottom: 317px;
   }
 
   @media (min-width: $desktop-width) {
@@ -76,6 +81,7 @@
     grid-row: 2/3;
     grid-column: 1/2;
     min-height: 462px;
+    padding-top: 73px;
     margin: 0;
   }
 }
@@ -84,9 +90,15 @@
   margin: 0 0 25px 0;
 
   @media (min-width: $tablet-width) {
-    margin-bottom: 54px;
+    width: 680px;
+    margin-bottom: 53px;
     grid-row: 1/2;
     grid-column: 1/-1;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 436px;
+    margin-bottom: 66px;
   }
 }
 
@@ -146,10 +158,22 @@
     align-items: flex-end;
     font-size: 20px;
     line-height: 20px;
+    margin-top: 12px;
   }
 
   @media (min-width: $desktop-width) {
     flex-direction: row;
+    margin: 0;
+  }
+}
+
+.example__result-text {
+  @media (min-width: $tablet-width) {
+    margin-bottom: 9px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 64px 0 0;
   }
 }
 
@@ -161,6 +185,20 @@
   line-height: 20px;
   color: $basic-black;
   text-transform: uppercase;
+
+  @media (min-width: $desktop-width) {
+    font-size: 20px;
+    line-height: 29px;
+    border-bottom: 1px dotted $basic-special-black;
+
+    &:hover {
+      border-bottom: 1px solid $basic-special-black1;
+    }
+
+    &:active {
+      border: none;
+    }
+  }
 }
 
 .example__wrapper-container {
@@ -173,7 +211,7 @@
   @media (min-width: $desktop-width) {
     grid-row: 1/2;
     grid-column: 1/2;
-    padding-top: 76px;
+    padding-top: 32px;
   }
 }
 
@@ -181,7 +219,7 @@
   margin: 0 0 33px 0;
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 63px 0;
+    margin: 0 0 65px 0;
   }
 
   @media (min-width: $desktop-width) {
@@ -196,8 +234,17 @@
   height: 240px;
 
   @media (min-width: $tablet-width) {
-    width: 677px;
-    height: 536px;
+    left: 38px;
+    top: -270px;
+    width: 578px;
+    height: 523px;
+  }
+
+  @media (min-width: $desktop-width) {
+    left: -15px;
+    top: -290px;
+    width: 578px;
+    height: 523px;
   }
 }
 
