--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,3 +1,9 @@
+.main-nav {
+  @media (min-width: $tablet-width) {
+    padding-top: 19px;
+  }
+}
+
 .main-nav__list {
   list-style: none;
   margin: 0;
@@ -14,8 +20,18 @@
   text-align: center;
 
   @media (min-width: $tablet-width) {
-    margin-left: 38px;
+    margin-left: 37px;
     border: none;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 35px;
+  }
+}
+
+.main-nav__item--indent {
+  @media (min-width: $tablet-width) {
+    margin-left: 34px;
   }
 }
 
@@ -39,6 +55,14 @@
     font-size: 18px;
     line-height: 24px;
     padding: 0;
+
+    &:hover {
+      opacity: 0.6;
+    }
+
+    &:active {
+      opacity: 0.3;
+    }
   }
 
   @media (min-width: $desktop-width) {
@@ -59,6 +83,7 @@
   }
 
   .main-nav__item--active {
+    padding-bottom: 4px;
     border-bottom: 2px solid $special-green;
   }
 }
