--- a/source/sass/blocks/our-address.scss
+++ b/source/sass/blocks/our-address.scss
@@ -5,7 +5,7 @@
 .our-address__address-wrapper {
   @media (min-width: $desktop-width) {
     position: absolute;
-    top: 90px;
+    top: 96px;
     min-width: 570px;
   }
 }
@@ -19,14 +19,15 @@
   padding: 23px 0 26px 0;
 
   @media (min-width: $tablet-width) {
-    padding-top: 65px;
-    padding-bottom: 20px;
+    justify-content: space-between;
+    padding: 65px 42px 20px 41px;
     min-height: 201px;
   }
 
   @media (min-width: $desktop-width) {
     min-height: 201px;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 65px 90px 20px 76px;
     background-color: $basic-white;
   }
 }
@@ -58,8 +59,11 @@
   line-height: 20px;
   text-align: start;
   margin-top: 5px;
+  min-width: 140px;
 
   @media (min-width: $tablet-width) {
+    margin-top: 0;
+    text-align: end;
     font-size: 16px;
     line-height: 20px;
   }
@@ -71,6 +75,10 @@
 
 .our-address__contact p {
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 19px;
+  }
 
   @media (min-width: $desktop-width) {
     margin-bottom: 19px;
