--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -9,6 +9,19 @@
   @media (min-width: $tablet-width) {
     display: flex;
     justify-content: space-between;
+    padding-top: 53px;
+    padding-bottom: 35px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 57px;
+    padding-bottom: 35px;
+  }
+}
+
+.page-footer__social {
+  @media (min-width: $tablet-width) {
+    margin-left: 25px;
   }
 }
 
@@ -17,7 +30,28 @@
   text-align: center;
 
   @media (min-width: $tablet-width) {
-    margin: 0;
+    margin-top: 5px;
     text-align: start;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 3px;
+    text-align: start;
+  }
+}
+
+.page-footer__logo-image {
+  @media (min-width: $tablet-width) {
+    height: 32px;
+  }
+}
+
+.page-footer__link[href] {
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &:active {
+    opacity: 0.6;
   }
 }
