--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -3,10 +3,12 @@
 
   @media (min-width: $tablet-width) {
     padding-top: 24px;
+    margin-bottom: 0;
   }
 
   @media (min-width: $desktop-width) {
     padding-top: 53px;
+    margin-bottom: 80px;
   }
 }
 
@@ -24,7 +26,7 @@
     display: flex;
     justify-content: space-between;
     max-width: $tablet-width;
-    margin: 0 auto 42px auto;
+    margin: 0 auto 64px auto;
     padding: 0 30px;
   }
 
