--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -20,10 +20,10 @@
 
 .example__choice-wrapper {
   text-align: center;
-  padding-bottom: 34px;
+  padding-bottom: 35px;
 
   @media (min-width: $tablet-width) {
-    padding-bottom: 70px;
+    padding-bottom: 68px;
     background: linear-gradient(0deg, $basic-grey2 70%, transparent 30%);
   }
 
@@ -31,7 +31,7 @@
     grid-row: 1/3;
     grid-column: 2/3;
     background: linear-gradient(0deg, transparent 73.1%, $basic-white 26.9%),
-      linear-gradient(270deg, $basic-grey2 50%, $basic-grey 50%);
+      linear-gradient(90deg, $basic-grey 53.5%, $basic-grey2 48%);
     padding-top: 262px;
     padding-bottom: 0;
   }
@@ -186,7 +186,7 @@
   color: $basic-black;
   text-transform: uppercase;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 29px;
     border-bottom: 1px dotted $basic-special-black;
@@ -262,5 +262,91 @@
 .example__cat-image {
   position: relative;
   min-height: 240px;
-  margin-bottom: 31px;
+  margin-bottom: 33px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 28px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 31px;
+  }
+}
+
+.example__selecting-result {
+  display: flex;
+  margin-left: 44px;
+
+  @media (min-width: $tablet-width) {
+    margin-left: 68px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: 39px;
+  }
+}
+
+.example__scale {
+  width: 84px;
+  height: 15px;
+  border: 1px solid $special-light-grey3;
+  background-color: $basic-white;
+  border-radius: 6px;
+  margin: 2px 16px 0 18px;
+
+  @media (min-width: $tablet-width) {
+    position: relative;
+    width: 428px;
+    height: 6px;
+    background-color: $special-light-grey3;
+    margin: 11px 22px 0 24px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 11px 20px 0 24px;
+  }
+}
+
+.example__toggle {
+  width: 35px;
+  height: 5px;
+  border-radius: 6px;
+  background-color: $special-green;
+  margin: 4px 6px;
+
+  @media (min-width: $tablet-width) {
+    width: 32px;
+    height: 32px;
+    border-radius: 50px;
+    background-color: $special-green;
+    border: 12px solid $basic-white;
+    margin: 1px 0 0 1px;
+  }
+}
+
+.example__rim {
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: -15px;
+    left: 197px;
+    width: 34px;
+    height: 34px;
+    background-color: $basic-special-black3;
+    box-shadow: 0 1px 3px $basic-special-black2;
+    border-radius: 50px;
+    margin: 0;
+
+    &:hover {
+      box-shadow: 0 2px 4px $basic-special-black3;
+    }
+
+    &:active {
+      background-color: $special-green;
+      box-shadow: 0 3px 5px $basic-special-black4;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    left: 198px;
+  }
 }
