--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -21,10 +21,12 @@
 .example__choice-wrapper {
   text-align: center;
   padding-bottom: 35px;
+  overflow: hidden;
 
   @media (min-width: $tablet-width) {
     padding-bottom: 68px;
     background: linear-gradient(0deg, $basic-grey2 70%, transparent 30%);
+    padding-bottom: 35px;
   }
 
   @media (min-width: $desktop-width) {
@@ -32,7 +34,7 @@
     grid-column: 2/3;
     background: linear-gradient(0deg, transparent 73.1%, $basic-white 26.9%),
       linear-gradient(90deg, $basic-grey 53.5%, $basic-grey2 48%);
-    padding-top: 262px;
+
     padding-bottom: 0;
   }
 }
@@ -73,7 +75,7 @@
   @media (min-width: $tablet-width) {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 317px;
+    margin-bottom: 50px;
   }
 
   @media (min-width: $desktop-width) {
@@ -150,7 +152,7 @@
   color: $basic-black;
   text-transform: uppercase;
   text-align: center;
-  margin-bottom: 35px;
+  margin-bottom: 42px;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -185,6 +187,7 @@
   line-height: 20px;
   color: $basic-black;
   text-transform: uppercase;
+  z-index: 1;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
@@ -211,7 +214,7 @@
   @media (min-width: $desktop-width) {
     grid-row: 1/2;
     grid-column: 1/2;
-    padding-top: 32px;
+    padding-top: 59px;
   }
 }
 
@@ -227,50 +230,8 @@
   }
 }
 
-.example__cat-fat {
-  position: absolute;
-  width: 270px;
-  left: -11px;
-  height: 240px;
-
-  @media (min-width: $tablet-width) {
-    left: 38px;
-    top: -270px;
-    width: 578px;
-    height: 523px;
-  }
-
-  @media (min-width: $desktop-width) {
-    left: -15px;
-    top: -290px;
-    width: 578px;
-    height: 523px;
-  }
-}
-
-.example__cat-skinny {
-  @media (min-width: $tablet-width) {
-    width: 545px;
-    height: 520px;
-  }
-}
-
 .cat-hidden {
   display: none;
-}
-
-.example__cat-image {
-  position: relative;
-  min-height: 240px;
-  margin-bottom: 33px;
-
-  @media (min-width: $tablet-width) {
-    margin-bottom: 28px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-bottom: 31px;
-  }
 }
 
 .example__selecting-result {
@@ -286,67 +247,142 @@
   }
 }
 
-.example__scale {
-  width: 84px;
-  height: 15px;
-  border: 1px solid $special-light-grey3;
-  background-color: $basic-white;
-  border-radius: 6px;
-  margin: 2px 16px 0 18px;
+.example__choice {
+  width: 280px;
+  margin: 0 auto;
 
   @media (min-width: $tablet-width) {
-    position: relative;
-    width: 428px;
-    height: 6px;
-    background-color: $special-light-grey3;
-    margin: 11px 22px 0 24px;
+    width: 650px;
+  }
+}
+
+.example__cat-image {
+  position: relative;
+  height: 250px;
+
+  @media (min-width: $tablet-width) {
+    height: 520px;
+  }
+}
+
+.example__cat {
+  max-width: none;
+  overflow: hidden;
+}
+
+.example__cat img {
+  display: block;
+  position: absolute;
+  max-width: none;
+  top: 0;
+}
+
+.before {
+  height: 100%;
+}
+
+.before img {
+  left: -20px;
+
+  @media (min-width: $tablet-width) {
+    left: 9px;
   }
 
   @media (min-width: $desktop-width) {
-    margin: 11px 20px 0 24px;
+    left: -17px;
+    top: 3px;
   }
 }
 
-.example__toggle {
-  width: 35px;
-  height: 5px;
-  border-radius: 6px;
-  background-color: $special-green;
-  margin: 4px 6px;
-
-  @media (min-width: $tablet-width) {
-    width: 32px;
-    height: 32px;
-    border-radius: 50px;
-    background-color: $special-green;
-    border: 12px solid $basic-white;
-    margin: 1px 0 0 1px;
-  }
+.after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  overflow: visible;
 }
 
-.example__rim {
-  @media (min-width: $tablet-width) {
+.after::before {
+  content: "";
+  display: block;
+  position: absolute;
+  top: -40px;
+  outline: 1px solid red;
+  width: 100vw;
+  height: calc(100% + 300px);
+  background: $basic-grey;
+}
+
+@media (min-width: $tablet-width) {
+  .after::before {
+    content: "";
+    display: block;
     position: absolute;
-    top: -15px;
-    left: 197px;
-    width: 34px;
-    height: 34px;
-    background-color: $basic-special-black3;
-    box-shadow: 0 1px 3px $basic-special-black2;
-    border-radius: 50px;
-    margin: 0;
+    top: -40px;
+    outline: 1px solid red;
+    width: 100vw;
+    height: calc(100% + 300px);
+    background: linear-gradient(to bottom, $basic-white, $basic-white 200px, $basic-grey2 201px);
+  }
+}
 
-    &:hover {
-      box-shadow: 0 2px 4px $basic-special-black3;
-    }
+.after-wrapper {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
 
-    &:active {
-      background-color: $special-green;
-      box-shadow: 0 3px 5px $basic-special-black4;
-    }
+.after img {
+  right: 11px;
+  top: 2px;
+
+  @media (min-width: $tablet-width) {
+    right: 28px;
   }
 
   @media (min-width: $desktop-width) {
-    left: 198px;
+    right: 54px;
   }
+}
+
+.example__range {
+  position: relative;
+  display: block;
+  width: 84px;
+  margin: 0 auto;
+
+  -webkit-appearance: none; /* Скрывает слайдер, чтобы можно было создать свой */
+  background: transparent;
+
+  @media (min-width: $desktop-width) {
+    width: 428px;
+    height: 40px;
+  }
+}
+
+.example__range:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-thumb {
+  appearance: none;
+  border: none;
+  height: 34px;
+  width: 34px;
+  border-radius: 50%;
+  background: $basic-green;
+  border: 13px solid $basic-white;
+  cursor: pointer;
+  margin-top: -14px; /* Вам нужно указать значение для поля в Chrome, но в Firefox и IE это происходит автоматически */
+  
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 6px;
+  cursor: pointer;
+  background: $special-light-grey3;
+  border-radius: 3px;
+  border: none;
 }
