--- a/source/sass/blocks/effect.scss
+++ b/source/sass/blocks/effect.scss
@@ -195,30 +195,32 @@
 }
 
 .effect__item--weight-loss {
-  background: url("../img/logo/logo-cat-slim.svg") 22px 21px no-repeat, $basic-grey;
+  background: url("../img/logo/mobile/logo-cat-slim.svg") 22px 21px no-repeat, $basic-grey;
 
   @media (min-width: $tablet-width) {
+    background: url("../img/logo/logo-cat-slim-table.svg") no-repeat;
     background-size: 200px 213px;
     background-position: 446px 80px;
   }
 
   @media (min-width: $desktop-width) {
     background-size: 100px 106px;
-    background-position: 52px 40px;
+    background-position: 52px 41px;
   }
 }
 
 .effect__item--weight-gain {
-  background: url("../img/logo/logo-cat-fat.svg") 13px 24px no-repeat, $basic-grey;
+  background: url("../img/logo/mobile/logo-cat-fat.svg") 13px 24px no-repeat, $basic-grey;
 
   @media (min-width: $tablet-width) {
+    background: url("../img/logo/logo-cat-fat-table.svg") no-repeat;
     background-size: 268px 200px;
-    background-position: 410px 91px;
+    background-position: 412px 91px;
   }
 
   @media (min-width: $desktop-width) {
     background-size: 134px 100px;
-    background-position: 33px 47px;
+    background-position: 34px 47px;
   }
 }
 
