--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -1,15 +1,45 @@
+.form {
+  padding-bottom: 10px;
+  margin-bottom: 22px;
+}
+
 .form__fieldset {
   border: none;
   padding: 0;
-  margin: 0 0 22px 0;
+  margin: 0 0 40px 0;
+}
+
+.form__fieldset--contacts {
+  margin-bottom: 10px;
+}
+
+.form__fieldset--comment {
+  margin-bottom: 19px;
+}
+
+.form__legend {
+  position: relative;
+  font-family: "Oswald", "Arial", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 24px;
+  line-height: 26px;
+  color: $basic-black;
+  margin-bottom: 35px;
+  padding: 0;
+
+  @media (min-width: $tablet-width) {
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
 
 .form__legend--line-contacts {
   &::before {
     position: absolute;
     content: "";
-    left: 199px;
-    top: 15px;
+    left: 201px;
+    top: 16px;
     border-top: 2px solid $basic-green;
     width: 100px;
   }
@@ -47,11 +77,13 @@
 }
 
 .form__legend--line-comment {
+  margin-bottom: 38px;
+
   &::before {
     position: absolute;
     content: "";
     top: 15px;
-    left: 141px;
+    left: 143px;
     border-top: 2px solid $basic-green;
     width: 158px;
   }
@@ -89,11 +121,13 @@
 }
 
 .form__legend--line-checkbox {
+  margin-bottom: 39px;
+
   &::before {
     position: absolute;
     content: "";
     top: 15px;
-    left: 165px;
+    left: 164px;
     border: 1px solid $basic-green;
     width: 136px;
   }
@@ -138,12 +172,28 @@
   line-height: 18px;
   text-transform: uppercase;
   color: $special-dark-grey;
-  padding-right: 13px;
+  margin-right: 13px;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 29px;
   }
+}
+
+.form__label--weight {
+  margin-right: 16px;
+}
+
+.form__label--age {
+  margin-right: 15px;
+}
+
+.form__label--email {
+  margin-right: 12px;
+}
+
+.form__label--tel {
+  margin-right: 9px;
 }
 
 .form__input {
@@ -171,12 +221,6 @@
 }
 
 .form__fieldset--separator {
-  border-bottom: 1px solid $dark-grey;
-
-  @media (min-width: $tablet-width) {
-    border: none;
-  }
-
   @media (min-width: $desktop-width) {
     margin-bottom: 0;
   }
@@ -194,20 +238,12 @@
   }
 }
 
-.form__legend {
-  position: relative;
-  font-family: "Oswald", "Arial", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 24px;
-  line-height: 26px;
-  color: $basic-black;
-  margin-bottom: 35px;
+.form__fieldset--radio {
+  margin-bottom: 25px;
+}
 
-  @media (min-width: $tablet-width) {
-    font-size: 36px;
-    line-height: 36px;
-  }
+.form__fieldset--checkbox {
+  margin-bottom: 14px;
 }
 
 .form__legend--size {
@@ -234,7 +270,14 @@
 }
 
 .form__button {
-  padding: 16px 44px;
+  padding: 10px 44px;
+  min-width: 280px;
+  margin-bottom: 21px;
+
+  @media (min-width: $tablet-width) {
+    padding: 16px 44px;
+    min-width: none;
+  }
 }
 
 .form__wrapper {
@@ -286,6 +329,7 @@
 }
 
 .form__legend-text {
+  margin: 0 0 0 0;
   line-height: 16px;
   color: $basic-black;
   text-align: center;
