--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -12,6 +12,10 @@
   }
 }
 
+.page-header--form {
+  margin-bottom: 27px;
+}
+
 .page-header__logo {
   display: inline-block;
   padding: 12px 0 12px 0;
