--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -23,8 +23,9 @@
 }
 
 .example__choice-wrapper {
+  position: relative;
   text-align: center;
-  padding-bottom: 35px;
+  padding-bottom: 55px;
   overflow: hidden;
 
   @media (min-width: $tablet-width) {
@@ -36,7 +37,7 @@
     grid-row: 1/3;
     grid-column: 2/3;
     background: linear-gradient(180deg, $basic-white 195px, transparent 195px),
-      linear-gradient(90deg, $basic-grey 53.5%, $basic-grey2 48%);
+      $basic-grey;
 
     padding-bottom: 0;
   }
@@ -246,14 +247,18 @@
 }
 
 .example__selecting-result {
+  position: absolute;
   display: flex;
   margin-left: 44px;
+  z-index: 1;
 
   @media (min-width: $tablet-width) {
+    bottom: 35px;
     margin-left: 68px;
   }
 
   @media (min-width: $desktop-width) {
+    top: 552px;
     margin-left: 19px;
   }
 }
@@ -274,11 +279,12 @@
   margin-bottom: 16px;
 
   @media (min-width: $tablet-width) {
-    height: 520px;
+    height: 560px;
     margin-bottom: 9px;
   }
 
   @media (min-width: $desktop-width) {
+    height: 100%;
     margin-bottom: 33px;
   }
 }
@@ -321,7 +327,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 50%;
+  width: 40%;
   height: 100%;
   overflow: visible;
 }
@@ -330,9 +336,8 @@
   content: "";
   display: block;
   position: absolute;
-
   width: 100vw;
-  height: calc(100% + 300px);
+  height: 100%;
   background: $basic-grey;
 }
 
@@ -341,7 +346,6 @@
     content: "";
     display: block;
     position: absolute;
-
     width: 100vw;
     height: 100%;
     background: linear-gradient(to bottom, $basic-white, $basic-white 171px, $basic-grey2 171px);
@@ -351,7 +355,6 @@
     .after::before {
       content: "";
       display: block;
-
       position: absolute;
       width: 100vw;
       height: 100%;
@@ -384,7 +387,7 @@
   display: block;
   width: 84px;
   margin: 2px 17px 0 18px;
-  appearance: none; /* Скрывает слайдер, чтобы можно было создать свой */
+  appearance: none;
   background: transparent;
 
   @media (min-width: $tablet-width) {
@@ -407,7 +410,7 @@
   outline: none;
 }
 
-input[type="range"]::-webkit-slider-thumb {
+.example__range::-webkit-slider-thumb {
   appearance: none;
   border: none;
   height: 6px;
@@ -425,7 +428,7 @@ input[type="range"]::-webkit-slider-thumb {
     border: 13px solid $basic-white;
     cursor: pointer;
     box-shadow: 0 0 0 1px $special-light-grey3, 0 1px 3px $special-light-grey3;
-    margin-top: -14px; /* Вам нужно указать значение для поля в Chrome, но в Firefox и IE это происходит автоматически */
+    margin-top: -14px;
 
     &:hover {
       box-shadow: 0 0 0 1px $special-light-grey3, 0 2px 4px $special-light-grey3;
@@ -437,7 +440,7 @@ input[type="range"]::-webkit-slider-thumb {
   }
 }
 
-input[type="range"]::-webkit-slider-runnable-track {
+.example__range::-webkit-slider-runnable-track {
   width: 84px;
   height: 14px;
   background: $basic-white;
@@ -455,7 +458,7 @@ input[type="range"]::-webkit-slider-runnable-track {
   }
 }
 
-input[type="range"]::-moz-range-thumb {
+.example__range::-moz-range-thumb {
   appearance: none;
   border: none;
   height: 6px;
@@ -473,7 +476,7 @@ input[type="range"]::-moz-range-thumb {
     border: 14px solid $basic-white;
     cursor: pointer;
     box-shadow: 0 0 0 1px $special-light-grey3, 0 1px 3px $special-light-grey3;
-    margin-top: -14px; /* Вам нужно указать значение для поля в Chrome, но в Firefox и IE это происходит автоматически */
+    margin-top: -14px;
 
     &:hover {
       box-shadow: 0 0 0 1px $special-light-grey3, 0 2px 4px $special-light-grey3;
@@ -485,7 +488,7 @@ input[type="range"]::-moz-range-thumb {
   }
 }
 
-input[type="range"]::-moz-range-track {
+.example__range::-moz-range-track {
   width: 84px;
   height: 14px;
   background: $basic-white;
