--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -26,8 +26,10 @@
   border-radius: 50%;
 
   @media (min-width: $tablet-width) {
-    top: 1px;
-    left: -40px;
+    width: 40px;
+    height: 40px;
+    top: -5px;
+    left: -50px;
   }
 }
 
