--- a/source/sass/global.scss
+++ b/source/sass/global.scss
@@ -60,7 +60,7 @@ body {
 
   @media (min-width: $tablet-width) {
     max-width: $tablet-width;
-    padding: 0 70px;
+    padding: 0 68px 0 69px;
     margin: 0 auto;
   }
 
