--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -259,7 +259,7 @@
 
   @media (min-width: $desktop-width) {
     top: 552px;
-    margin-left: 19px;
+    right: 0;
   }
 }
 
@@ -267,10 +267,6 @@
   width: 100%;
   height: 100%;
   margin: 0 auto;
-
-  @media (min-width: $desktop-width) {
-    margin-left: 20px;
-  }
 }
 
 .example__cat-image {
@@ -284,6 +280,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    width: 650px;
     height: 100%;
     margin-bottom: 33px;
   }
@@ -318,7 +315,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    left: -37px;
+    left: -17px;
     top: 3px;
   }
 }
@@ -327,7 +324,7 @@
   position: absolute;
   top: 0;
   right: 0;
-  width: 40%;
+  width: 100%;
   height: 100%;
   overflow: visible;
 }
@@ -378,7 +375,7 @@
   }
 
   @media (min-width: $desktop-width) {
-    right: 34px;
+    right: 54px;
   }
 }
 
