--- a/source/sass/blocks/fields-list.scss
+++ b/source/sass/blocks/fields-list.scss
@@ -5,6 +5,7 @@
 }
 
 .fields-list__item {
+  position: relative;
   display: flex;
   margin-bottom: 13px;
   align-items: baseline;
@@ -19,6 +20,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 60px;
+    row-gap: 20px;
   }
 
   @media (min-width: $desktop-width) {
