--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -4,11 +4,15 @@
   color: $special-dark-grey;
 }
 
+.copyright__logo {
+  fill: $special-light-grey4;
+}
+
 .copyright__link {
   display: flex;
   justify-content: space-between;
 
-  &:hover path {
+  &:hover .copyright__logo {
     fill: $special-green;
   }
 
