--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -15,6 +15,7 @@ $light-grey: #e7e7e7;
 $basic-grey2: #eaeaea;
 $special-light-grey: #e6e6e6;
 $special-light-grey2: #ebebeb;
+$special-light-grey4: #666666;
 $special-dark-grey: rgba(68, 68, 68, 1);
 $special-dark-grey2: #bababa;
 $special-light-black: #222222;
