--- a/source/sass/blocks/radio.scss
+++ b/source/sass/blocks/radio.scss
@@ -37,6 +37,10 @@
   border: 1px solid $special-dark-grey2;
 }
 
+.radio__input:focus + .radio__label::before {
+  border: 1px solid $special-dark-grey2;
+}
+
 .radio__input:checked + .radio__label::before {
   background-color: $special-green;
   box-shadow: inset 0 0 0 7px $basic-white;
@@ -49,6 +53,7 @@
 .radio__input:checked:hover + .radio__label::before {
   border: 1px solid $special-dark-grey2;
 }
+
 
 .radio__input:disabled + .radio__label::before {
   opacity: 0.3;
